--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@opentelemetry/api": "1.9.0",
     "@prisma/client": "^5.22.0",
     "date-fns": "^4.1.0",
+    "firebase-admin": "13.6.0",
+    "firebase-functions": "7.0.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "acorn": "8.15.0",
     "autoprefixer": "^10.0.1",
+    "markdown-it": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.3.0",
