--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@opentelemetry/api": "1.9.0",
-    "@prisma/client": "^5.22.0",
     "client-only": "^0.0.1",
     "date-fns": "^4.1.0",
     "firebase-admin": "13.6.0",
@@ -30,7 +28,6 @@
     "autoprefixer": "^10.0.1",
     "markdown-it": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.22.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
