--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "date-fns": "^4.1.0",
     "firebase-admin": "13.6.0",
     "firebase-functions": "7.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18.2.0",
